# casquery

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci-cd.yaml
src/casquery/: __init__.py  casquery.py
tests/: test_casquery.py
